# MQForge

./: CMakeLists.txt  README.md  basic_json_parse.c  basic_json_parse.h  compiler.c  compiler.h  file_importer.c  file_importer.h  file_orderer.c  file_orderer.h  file_utils.c  file_utils.h  forge_commands.json  globals.c  globals.h  main.c  sys_interactions_linux.c  sys_interactions_linux.h  sys_interactions_windows.c  sys_interactions_windows.h  utils.c  utils.h
